# logbot

./: .gitignore  Cargo.toml  README.md  network.puml  requirements.txt  setup.sh
archive/: line_follower.py  requirements.txt  rotations.py  sensor.py  stepper.py
components/: README.md
components/chassis/: logbot_3dprint_front.stl  logbot_3dprint_top.stl  logbot_bumper.stl
components/wheels/: logbot_wheelcover_l.stl  logbot_wheelcover_r.stl
crates/acceleration/: Cargo.toml
crates/acceleration/src/: lib.rs  linear.rs  sineinout.rs
crates/calibration/: Cargo.toml
crates/calibration/src/: kmeans.rs  lib.rs
crates/chart/: Cargo.toml
crates/chart/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/components/: Cargo.toml
crates/components/src/: lib.rs  sensor.rs
crates/components/src/motors/: mod.rs
crates/components/src/motors/hardware_pwm/: dcmotor.rs  mod.rs
crates/components/src/motors/software_pwm/: dcmotor.rs  lift.rs  mod.rs  signed.rs
crates/consts/: Cargo.toml
crates/consts/src/: lib.rs
crates/defaults/: Cargo.toml
crates/defaults/src/: lib.rs
crates/demo/: Cargo.toml
crates/demo/examples/: demo.rs
crates/demo/src/: error.rs  lib.rs
crates/directions/: Cargo.toml
crates/directions/src/: lib.rs  motor.rs  spin.rs  vehicle.rs
crates/event_list/: Cargo.toml
crates/event_list/src/: lib.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: lib.rs
crates/line/: Cargo.toml
crates/line/src/: follow.rs  lib.rs
crates/logbot/: Cargo.toml
crates/logbot/src/: error.rs  lib.rs
crates/oscillate/: Cargo.toml
crates/oscillate/src/: lib.rs
crates/pwm/: Cargo.toml
crates/pwm/src/: main.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: hardware.rs  main.rs  routes.rs  state.rs
crates/server/src/routes/: calibrate.rs  demo.rs  edge.rs  follow.rs  health.rs  lift.rs  mod.rs  stop.rs
crates/speed/: Cargo.toml
crates/speed/src/: lib.rs
crates/vehicle/: Cargo.toml
crates/vehicle/src/: error.rs  lib.rs
docs/: PINS.md
src/: calibrate.py  const.py  logbot.py  motors.py  qr_demo.py  sensors.py  vehicle.py  video.py  video.service
src/web_ui/: wsgi.py
src/web_ui/controlpanel/: __init__.py  auth.py  controlpanel.nginx.conf  controlpanel.py  controlpanel.service  models.py  requirements.txt  utils.py
src/web_ui/controlpanel/static/: script.js  stylesheet.css
src/web_ui/controlpanel/templates/: base.html  controlpanel.html  index.html  login.html
src/web_ui/instance/: db.sqlite
