[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
interfaces.workspace = true
line.workspace = true
oscillate.workspace = true
calibration.workspace = true
consts.workspace = true
speed.workspace = true
components.workspace = true
directions.workspace = true
acceleration.workspace = true

[dev-dependencies]
defaults.workspace = true
vehicle.workspace = true
